--- a/Games/DealCardGame/Blazor/MakePaymentComponent.razor
+++ b/Games/DealCardGame/Blazor/MakePaymentComponent.razor
@@ -1,11 +1,11 @@
 ﻿<div>
-    <HandBlazor TargetContainerSize="80vw" Hand="DataContext!.Bank" />
+    <HandBlazor TargetContainerSize="80vw" Hand="DataContext!.VMData.Bank" />
 </div>
 <div>
-    <HandBlazor TargetContainerSize="80vw" Hand="DataContext!.Properties" />
+    <HandBlazor TargetContainerSize="80vw" Hand="DataContext!.VMData.Properties" />
 </div>
 <div>
-    <HandBlazor TargetContainerSize="80vw" Hand="DataContext!.Payments" />
+    <HandBlazor TargetContainerSize="80vw" Hand="DataContext!.VMData.Payments" />
 </div>
 <div>
     <GameButtonComponent Display="Start Over" CommandObject="StartOverCommand" />
