--- a/Games/DealCardGame/Blazor/OriginalActionComponent.razor
+++ b/Games/DealCardGame/Blazor/OriginalActionComponent.razor
@@ -19,6 +19,18 @@ else if (ActionCard.ActionCategory == EnumActionCategory.ForcedDeal)
         <DisplayTradeComponent PlayerToDisplay="OpponentPlayer" />
     </div>
 }
+else if (ActionCard.ActionCategory == EnumActionCategory.DebtCollector)
+{
+    <div>
+        <DisplayMiscPaymentComponent Owed="5" PlayerToDisplay="OpponentPlayer" />
+    </div>
+}
+else if (ActionCard.ActionCategory == EnumActionCategory.Birthday)
+{
+    <div>
+        <DisplayMiscPaymentComponent Owed="2" PlayerToDisplay="OpponentPlayer" />
+    </div>
+}
 else
 {
     <div>Not supported for now</div>
