--- a/Games/DealCardGame/Blazor/JustSayNoComponent.razor
+++ b/Games/DealCardGame/Blazor/JustSayNoComponent.razor
@@ -21,13 +21,19 @@ else if (DataContext!.ActionCard.ActionCategory == EnumActionCategory.ForcedDeal
 {
     <DisplayTradeComponent  PlayerToDisplay="DataContext.GetSelf" />
 }
-else if (DataContext.ActionCard.ActionCategory == EnumActionCategory.Birthday)
+@* else if (DataContext.ActionCard.ActionCategory == EnumActionCategory.Birthday)
 {
     <DisplayMiscPaymentComponent Owed="2" PlayerToDisplay="DataContext.GetSelf" />
-}
+} *@
 else if (DataContext.ActionCard.ActionCategory == EnumActionCategory.DebtCollector)
 {
     <DisplayMiscPaymentComponent Owed="5" PlayerToDisplay="DataContext.GetSelf" />
+}
+else if (DataContext.ActionCard.CardType == EnumCardType.ActionRent && DataContext.ActionCard.AnyColor)
+{
+    <DisplaySinglePlayerRentComponent Owed="DataContext.SaveRoot!.PaymentOwed"
+                                      PlayerToDisplay="DataContext.GetSelf"
+                                      RentCategory="@DataContext.SaveRoot.RentCategory" />
 }
 else
 {
