Preparing for the processes for all players deciding if they want to pay for birthday.

--- a/Games/DealCardGame/Blazor/DisplayMiscPaymentComponent.razor
+++ b/Games/DealCardGame/Blazor/DisplayMiscPaymentComponent.razor
@@ -5,4 +5,16 @@
     <div>
         @DisplayName
     </div>
+    @if (NeedsPlayerList)
+    {
+        @foreach (var player in Players)
+        {
+            if (player.AllPlayerStatus == EnumAllPlayerStatus.Accept)
+            {
+                <div>
+                    @player.NickName to pay @player.Debt
+                </div>
+            }
+        }
+    }
 </div>
