Fixed problem with base temp sets.  Now it has repeating for the stack layout so won't get pushed down.

--- a/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/SpecializedFrames/TempRummySets/BaseTempSetsBlazor.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/SpecializedFrames/TempRummySets/BaseTempSetsBlazor.razor
@@ -9,7 +9,7 @@
 <StackLayout ItemSpacing="10px" Orientation="EnumOrientation.Horizontal">
     @foreach (var pile in TempPiles.SetList)
     {
-        <StackItem>
+        <StackItem Style="@GetStyle">
             <BaseHandBlazor D="RU" Hand="pile"
                             HandType="EnumHandList.Vertical"
                             AdditionalSpacing="@AdditionalSpacing"
