Fixed bug with Life Card Game where positioning eventually got hosed by using stack layout.

--- a/Games/LifeCardGame/Blazor/Views/LifeCardGameMainView.razor
+++ b/Games/LifeCardGame/Blazor/Views/LifeCardGameMainView.razor
@@ -39,13 +39,19 @@
             </div>
         </GridItem>
         <GridItem Column="2">
-            @foreach (var player in _players)
-            {
-                <HandBlazor Hand="player.LifeStory"
-                        HandType="EnumHandList.Vertical"
-                        TargetContainerSize="85vh"
-                        Divider="4" />
-            }
+            <StackLayout>
+                @foreach (var player in _players)
+                {
+                    <StackItem>
+                        <HandBlazor Hand="player.LifeStory"
+                                    HandType="EnumHandList.Vertical"
+                                    TargetContainerSize="85vh"
+                                    Divider="4" />
+                    </StackItem>
+                    
+                }
+            </StackLayout>
+            
         </GridItem>
     </GridContainer>
 </CascadingValue>
