--- a/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/SpecializedFrames/Hands/BaseHandBlazor.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/SpecializedFrames/Hands/BaseHandBlazor.razor
@@ -1,57 +1,37 @@
 ﻿@inherits KeyComponentBase
 @typeparam D
-@if (Hand == null || Hand.Visible == false || _points.Count != Hand.HandList.Count)
+@if (Hand == null || Hand.Visible == false )
 {
     return;
-}
-@{
-    int x = 0;
 }
 <CascadingValue Value="this">
     @if (Hand.HasFrame)
     {
         <fieldset @key="Hand" @onclick="BoardClicked" style="@GetContainerStyle() @GetColorStyle();" disabled="@IsDisabled">
-            <legend style="float:none;">@Hand.Text</legend>
-            <svg style="@GetSvgStyle()" viewBox="@GetViewBox()">
-                @foreach (var item in Hand.HandList)
-                {
-                    var point = _points[x];
-                    if (Rotated == false)
-                    {
-                        <FlexibleDeckRenderComponent D="D" DeckObject="item" UseKey = "UseKey">
-                            <svg x="@point.X" y="@point.Y" width="@item.DefaultSize.Width" height="@item.DefaultSize.Height">
-                                @ChildContent!(item)
-                            </svg>
-                        </FlexibleDeckRenderComponent>
-                    }
-                    else
-                    {
-                        <FlexibleDeckRenderComponent D="D" DeckObject="item" UseKey = "UseKey">
-                            <svg x="@point.X" y="@point.Y" width="@item.DefaultSize.Height" height="@item.DefaultSize.Width">
-                                @ChildContent!(item)
-                            </svg>
-                        </FlexibleDeckRenderComponent>
-                    }
-                    x++;
-                }
-            </svg>
+            <legend style="float:none; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; min-width:0; max-width:100%; @GetLegendStyle()">@Hand.Text</legend>
+            @for (int i = 0; i < Hand.HandList.Count; i++)
+            {
+                D card = Hand.HandList[i];
+                <div style="@GetCardStyle(i)">
+                    <FlexibleDeckRenderComponent D="D" DeckObject="card" UseKey="UseKey">
+                        @ChildContent!(card)
+                    </FlexibleDeckRenderComponent>
+                </div>
+            }
         </fieldset>
     }
     else
     {
         <div @key="Hand" @onclick="BoardClicked" style="@GetContainerStyle() display:inline-block; margin: 0px;">
-            <svg style="@GetSvgStyle()" viewBox="@GetViewBox()">
-                @foreach (var item in Hand.HandList)
-                {
-                    var point = _points[x];
-                    <FlexibleDeckRenderComponent D="D" UseKey = "UseKey" DeckObject="item">
-                        <svg x="@point.X" y="@point.Y" width="@item.DefaultSize.Width" height="@item.DefaultSize.Height">
-                            @ChildContent!(item)
-                        </svg>
+            @for (int i = 0; i < Hand.HandList.Count; i++)
+            {
+                D card = Hand.HandList[i];
+                <div style="@GetCardStyle(i)">
+                    <FlexibleDeckRenderComponent D="D" DeckObject="card" UseKey="UseKey">
+                        @ChildContent!(card)
                     </FlexibleDeckRenderComponent>
-                    x++;
-                }
-            </svg>
+                </div>
+            }
         </div>
     }
 </CascadingValue>
