Refactor HandBlazor for improved card display handling
Updated `HandBlazor.razor` to inherit from `AbstractHandBlazor<RageCardGameCardInformation>` and introduced a new `<BaseHandBlazor>` component. Removed several `[Parameter]` properties from `HandBlazor.razor.cs`, indicating a shift in property management to the base class.

Modified container size calculation logic in `BaseHandBlazor<D>`, including a new method `GetWidthWithNoContainerSize` for dynamic width calculation based on card count. Enhanced padding and adjusted handling of `TargetContainerSize` for better responsiveness.

These changes improve the flexibility and layout management of the hand display in the UI.

--- a/Games/RageCardGame/Blazor/HandBlazor.razor
+++ b/Games/RageCardGame/Blazor/HandBlazor.razor
@@ -1,3 +1,4 @@
+@inherits AbstractHandBlazor<RageCardGameCardInformation>
 <BaseHandBlazor D="RageCardGameCardInformation" Hand="Hand" AdditionalSpacing="AdditionalSpacing" Divider="Divider"
                 HandType="HandType" TargetContainerSize="@TargetContainerSize" TargetImageSize="@TargetImageSize" Context="DeckObject">
     <CardGraphicsBlazor DeckObject="DeckObject" @key="GetKey" CommandParameter="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
