Enhance card spacing and layout in game UI
Updated `DeckOfCardsHandBlazor` to include an `AdditionalSpacing` property set to `1` for improved card spacing. Adjusted `GridContainer` column widths from `45vw 50vw` to `35vw 60vw` to enhance layout.  This was for Cousins Rummy.

Added logic in `BaseHandBlazor` to handle `AdditionalSpacing`, setting `realSpacing` to `0` when it equals `1`, ensuring consistent spacing behavior.

--- a/Games/CousinRummy/Blazor/Views/CousinRummyMainView.razor
+++ b/Games/CousinRummy/Blazor/Views/CousinRummyMainView.razor
@@ -4,9 +4,9 @@
     return;
 }
 <div>
-    <DeckOfCardsHandBlazor R="RegularRummyCard" TargetContainerSize="95vw" Hand="_vmData.PlayerHand1" />
+    <DeckOfCardsHandBlazor R="RegularRummyCard" AdditionalSpacing="1" TargetContainerSize="95vw" Hand="_vmData.PlayerHand1" />
 </div>
-<GridContainer Rows="@GetFirstRows" Columns="45vw 50vw" RowGap="5px" ColumnGap="5px" Inline="true">
+<GridContainer Rows="@GetFirstRows" Columns="35vw 60vw" RowGap="5px" ColumnGap="5px" Inline="true">
     <GridItem>
         <div>
             <GameButtonComponent CommandObject="InitCommand"
