--- a/Games/LifeBoardGame/Blazor/LifeHandBlazor.razor
+++ b/Games/LifeBoardGame/Blazor/LifeHandBlazor.razor
@@ -3,8 +3,9 @@
     <BaseHandBlazor D="LifeBaseCard" Hand="Hand"
                     HandType="EnumHandList.Vertical"
                     TargetImageSize="@RealHeight"
+                    LegendExtraWidth="20"
                     Context="DeckObject">
-        <LifeCardBlazor CommandParameter="DeckObject" DeckObject="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
+        <LifeCardBlazor CommandParameter="DeckObject" TargetHeight="@RealHeight" DeckObject="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
     </BaseHandBlazor>
     return;
 }
@@ -14,5 +15,5 @@
                 TargetImageSize="@RealHeight"
                 Context="DeckObject"
                 Divider="1.3">
-    <LifeCardBlazor CommandParameter="DeckObject" DeckObject="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
+    <LifeCardBlazor CommandParameter="DeckObject" TargetHeight="@RealHeight" DeckObject="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
 </BaseHandBlazor>
