Add LegendExtraWidth parameter for layout adjustments
This commit introduces a new parameter, `LegendExtraWidth`, to various components in the Blazor application, allowing for additional width to be specified in pixels.

Key changes include:
- Updated `BaseHandBlazor` and `HandBlazor` components to incorporate `LegendExtraWidth`.
- Adjusted layout logic in `BaseHandBlazor` to account for the new width parameter.
- Modified `AbstractHandBlazor` to support the new property for derived classes.
- Updated `LifeCardGameMainView` to demonstrate usage of `LegendExtraWidth`.

--- a/Games/LifeCardGame/Blazor/Views/LifeCardGameMainView.razor
+++ b/Games/LifeCardGame/Blazor/Views/LifeCardGameMainView.razor
@@ -46,7 +46,8 @@
                         <HandBlazor Hand="player.LifeStory"
                                     HandType="EnumHandList.Vertical"
                                     TargetContainerSize="85vh"
-                                    Divider="4" />
+                                    LegendExtraWidth="20"
+                                    Divider="3.5" />
                     </StackItem>
                     
                 }
