--- a/Games/LifeCardGame/Blazor/HandBlazor.razor
+++ b/Games/LifeCardGame/Blazor/HandBlazor.razor
@@ -1,4 +1,9 @@
-<BaseHandBlazor D="LifeCardGameCardInformation" Hand="Hand" AdditionalSpacing="AdditionalSpacing" Divider="Divider"
+@inherits AbstractHandBlazor<LifeCardGameCardInformation>
+<BaseHandBlazor D="LifeCardGameCardInformation" Hand="Hand" 
+    LegendExtraWidth="@LegendExtraWidth"
+    AdditionalSpacing="AdditionalSpacing" Divider="Divider"
                 HandType="HandType" TargetContainerSize="@TargetContainerSize" TargetImageSize="@TargetImageSize" Context="DeckObject">
-    <CardGraphicsBlazor DeckObject="DeckObject" @key="GetKey" CommandParameter="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
+    <CardGraphicsBlazor DeckObject="DeckObject"
+        TargetHeight="@RealHeight()"
+        @key="GetKey" CommandParameter="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
 </BaseHandBlazor>
