Fixed several games.

--- a/Games/Flinch/Blazor/HandBlazor.razor
+++ b/Games/Flinch/Blazor/HandBlazor.razor
@@ -1,4 +1,8 @@
+@inherits AbstractHandBlazor<FlinchCardInformation>
 <BaseHandBlazor D="FlinchCardInformation" Hand="Hand" AdditionalSpacing="AdditionalSpacing" Divider="Divider"
-                HandType="HandType" TargetContainerSize="@TargetContainerSize" TargetImageSize="@TargetImageSize" Context="DeckObject">
-    <CardGraphicsBlazor DeckObject="DeckObject" @key="GetKey" CommandParameter="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
+                HandType="HandType" 
+                TargetContainerSize="@TargetContainerSize" TargetImageSize="@TargetImageSize" Context="DeckObject">
+    <CardGraphicsBlazor DeckObject="DeckObject" @key="GetKey"
+        TargetHeight="@RealHeight()"
+        CommandParameter="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
 </BaseHandBlazor>
