--- a/Games/Savannah/Blazor/SelfDiscardBlazor.razor
+++ b/Games/Savannah/Blazor/SelfDiscardBlazor.razor
@@ -2,48 +2,25 @@
 {
     return;
 }
-@if (DiscardPile.HasFrame == false)
+@if (!DiscardPile.HasFrame)
 {
     <div>Must use frames for the self discard piles for blazor</div>
     return;
 }
+
 <CascadingValue Value="this">
     <fieldset style="@GetContainerStyle() @GetColorStyle();" disabled="@IsDisabled">
         <legend style="float:none;">@DiscardPile.Text</legend>
-        <svg style="@GetSvgStyle()" viewBox="@GetViewBox()" @onclick="ClickAsync">
-            @if (DiscardPile.HandList.Count > 0)
+        <div style="@GetCardContainerStyle()" @onclick="ClickAsync">
+            @for (int i = 0; i < DiscardPile.HandList.Count; i++)
             {
-                @for (var i = 0; i < DiscardPile.Maximum; i++)
-                {
-                    int x = i;
-                    if (x + 1 > DiscardPile.HandList.Count)
-                    {
-                        continue;
-                    }
-                    if (_points.Count == 0)
-                    {
-                        continue; //i think this should work.
-                    }
-                    var point = _points[x];
-                    RegularSimpleCard card = DiscardPile.HandList[x];
+                var card = DiscardPile.HandList[i];
+                <div style="@GetCardStyle(i, card)">
                     <FlexibleDeckRenderComponent D="RegularSimpleCard" DeckObject="card" UseKey="true">
-                        <svg x="@point.X" y="@point.Y" width="@card.DefaultSize.Width" height="@card.DefaultSize.Height">
-                            @ChildContent!(card)
-                        </svg>
+                        @ChildContent!(card)
                     </FlexibleDeckRenderComponent>
-                }
-                if (DiscardPile.HandList.Count > DiscardPile.Maximum && _points.Count > 0)
-                {
-                    var lastPoint = _points.Last();
-                    RegularSimpleCard lastCard = DiscardPile.HandList.Last();
-                    <FlexibleDeckRenderComponent D="RegularSimpleCard" DeckObject="lastCard" UseKey="true">
-                        <svg x="@lastPoint.X" y="@lastPoint.Y" width="@lastCard.DefaultSize.Width" height="@lastCard.DefaultSize.Height">
-                            @ChildContent!(lastCard)
-                        </svg>
-                    </FlexibleDeckRenderComponent>
-                    
-                }
+                </div>
             }
-        </svg>
+        </div>
     </fieldset>
 </CascadingValue>
